rendered/1e231787/my-app/templates/deployment.yml
---
# Source: my-app/templates/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-my-app
  namespace: "test"
  labels:
    app.kubernetes.io/name: my-app
    helm.sh/chart: my-app-21.1.0
    app.kubernetes.io/instance: test-my-app
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: "6.2.0"
    app: test-my-app
  annotations:
    configmap-hash: cce3dc9cde14cee015c9dd1e6f957c1f0490ffdc8055cc9e713551622dea9c85
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: my-app
      app.kubernetes.io/instance: test-my-app
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        configmap-hash: cce3dc9cde14cee015c9dd1e6f957c1f0490ffdc8055cc9e713551622dea9c85
        helm.sh/revision: "1"
      labels:
        app.kubernetes.io/name: my-app
        helm.sh/chart: my-app-21.1.0
        app.kubernetes.io/instance: test-my-app
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/version: "6.2.0"
        app: test-my-app
    spec:
      securityContext:
        fsGroup: 1000
      serviceAccountName: test-my-app
      
      shareProcessNamespace: false
      restartPolicy: Always
      enableServiceLinks: true
      containers:
        - image: docker.io/:6.2.0
          imagePullPolicy: IfNotPresent
          
          name: test-my-app
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
            seccompProfile:
              type: RuntimeDefault
          resources:
            limits:
              cpu: 1500m
              memory: 2048M
            requests:
              cpu: 1000m
              memory: 1024M
          volumeMounts:
            - mountPath: /etc/config.yaml
              name: config
              readOnly: true
              subPath: config.yaml
      volumes:
        - configMap:
            items:
            - key: config
              path: config.yaml
            name: test-my-app
          name: config      
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: test-my-app
                    app.kubernetes.io/name: my-app
                topologyKey: kubernetes.io/hostname
              weight: 1
