rendered/1e231787/my-app/templates/httproute.yml
---
# Source: my-app/templates/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test-my-app
  namespace: "test"
  labels:
    app.kubernetes.io/name: my-app
    helm.sh/chart: my-app-21.1.0
    app.kubernetes.io/instance: test-my-app
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: "6.2.0"
    app: test-my-app
  annotations:
spec:
  rules:
  - backendRefs:
    - name: test-my-app
      port: 8080
      weight: 100
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          replacePrefixMatch: /
          type: ReplacePrefixMatch
    matches:
    - path:
        type: PathPrefix
        value: /api/test
